stop right-alignment of numeric total headers from being overridden by title css

--- a/css/gladbooks.css
+++ b/css/gladbooks.css
@@ -728,7 +728,10 @@ td.total, input.total,
 .xml-amount,
 .xml-subtotal,
 .xml-tax,
-.xml-total {
+.xml-total,
+table.datatable th.xml-total,
+table.datatable th.xml-subtotal,
+table.datatable th.xml-tax {
   text-align: right;
   white-space: pre; }
 
