--- a/sass/includes/misc.scss
+++ b/sass/includes/misc.scss
@@ -253,9 +253,12 @@ td.total, input.total,
 .xml-debit ,
 .xml-credit ,
 .xml-amount ,
-.xml-subtotal ,
+.xml-subtotal,
 .xml-tax ,
-.xml-total {
+.xml-total,
+table.datatable th.xml-total,
+table.datatable th.xml-subtotal,
+table.datatable th.xml-tax {
 	text-align: right;
 	white-space: pre;
 }
